# agentlife

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/PULL_REQUEST_TEMPLATE/: persona-pack.md
agentlife/: __init__.py  cli.py  config.py
guides/: docker.md  getting-started.md  linux.md  macos.md  mcp-integration.md  raspberry-pi.md  vps.md  windows-wsl.md
guides/concepts/: how-hermes-works.md  three-tier-model.md  what-is-an-ai-agent.md  what-is-mcp.md
packs/base/: config.yaml
packs/base/mcp/: README.md  filesystem.yaml  github.yaml  puppeteer.yaml  time.yaml  web-search.yaml
packs/base/scripts/: config-validate.py  hermes-connect.sh  update-check.sh
packs/base/skills/: base-system-health.md  base-update-check.md
packs/life-ops/: config.yaml
packs/life-ops/helpers/: calendar-ops.py  expense-tracker.py  portfolio-tracker.py  subscription-manager.py
packs/life-ops/scripts/: calendar-brief.sh  daily-brief.sh  net-worth.sh  renewal-check.sh  spending-digest.sh
packs/life-ops/skills/: life-ops-calendar.md  life-ops-daily-brief.md  life-ops-expenses.md  life-ops-portfolio.md  life-ops-subscriptions.md
packs/life-ops/use-cases/: bill-subscriptions.yaml  calendar-ops.yaml  expense-tracking.yaml  portfolio-tracking.yaml
packs/template/: README.md
packs/template/scripts/: template-job.sh
packs/template/skills/: template-skill.md
packs/template/use-cases/: template-use-case.yaml
scripts/: install.sh  verify.sh
