[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "agentlife"
version = "0.1.0"
description = "Persona-based configuration layer for Hermes Agent"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
]

[project.scripts]
agentlife = "agentlife.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["agentlife*"]